feat: stream service
